--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,12 @@
 name: Pull Github Merged file
 on:
   workflow_dispatch:
-    inputs:
-      token:
-        description: 'token'
-        required: true
-        default: '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'
-        type: string
+    # inputs:
+    #   token:
+    #     description: 'token'
+    #     required: true
+    #     default: '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'
+    #     type: string
     branches:
       - main
 jobs:
@@ -20,15 +20,16 @@ jobs:
           java-version: '11'
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.0.5'
+          flutter-version: '3.3.10'
       - run: flutter pub get
       - run: flutter test
       - run: flutter build apk
-  post_issues_on_Teams:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3.3.0
+    
+  # post_issues_on_Teams:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3.3.0
       # - name: Run Python Script
       #   run: python .github/workflows/action.py
         # env:
