--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Pull Github Merged file
+name: Flutter Build then notify Teams
 on:
   workflow_dispatch:
     # branches:
@@ -8,13 +8,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
-        with:
-          distribution: 'zulu'
-          java-version: '11'
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.3.10'
+      # - uses: actions/setup-java@v2
+      #   with:
+      #     distribution: 'zulu'
+      #     java-version: '11'
+      # - uses: subosito/flutter-action@v2
+      #   with:
+      #     flutter-version: '3.3.10'
       # - run: flutter pub get
       # - run: flutter test
       # - run: flutter build apk
