--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,23 +8,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      # - uses: actions/setup-java@v2
-      #   with:
-      #     distribution: 'zulu'
-      #     java-version: '11'
-      # - uses: subosito/flutter-action@v2
-      #   with:
-      #     flutter-version: '3.3.10'
-      # - run: flutter pub get
-      # - run: flutter test
-      # - run: flutter build apk
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '11'
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.3.10'
+      - run: flutter pub get
+      - run: flutter test
+      - run: flutter build apk
       - name: upload APK to Google Drive
         env:
           OAUTH_GOOGLE : ${{ secrets.OAUTH_GOOGLE }}
         id: gdrive
         run: python .github/workflows/uploadGdrive.py
-      # - name: notif Teams
-      #   env:
-      #     LINK_GDRIVE : ${{ steps.gdrive.outputs.link }}
-      #   run: python .github/workflows/action.py
+      - name: notif Teams
+        env:
+          LINK_GDRIVE : ${{ steps.gdrive.outputs.link }}
+        run: python .github/workflows/action.py
 
